--- a/cup_of_tea/Base.lproj/Main.storyboard
+++ b/cup_of_tea/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                             <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Master" id="Zdf-7t-Un8"/>
+                    <navigationItem key="navigationItem" title="The ones" id="Zdf-7t-Un8"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
@@ -448,6 +448,9 @@
                                                             <constraint firstAttribute="height" constant="100" id="Vow-Lw-wqR"/>
                                                         </constraints>
                                                         <state key="normal" image="camera_icon"/>
+                                                        <connections>
+                                                            <action selector="cameraPressed:" destination="ZV8-Wi-Yg8" eventType="touchUpInside" id="Vpt-dw-lUx"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dr-dX-egy">
                                                         <rect key="frame" x="0.0" y="108" width="100" height="21"/>
@@ -510,8 +513,14 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="btnPressed:" destination="O07-vV-tcg" eventType="touchUpInside" id="2ww-p6-4td"/>
+                                    <segue destination="yEe-C1-jNy" kind="show" id="Ziz-Kh-WDg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -533,6 +542,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SoQ-qG-7YP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="295.6521739130435" y="-1319.8369565217392"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nHg-mO-fFM">
+            <objects>
+                <viewController id="yEe-C1-jNy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ClU-rj-Vrn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hFC-9x-hVs"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A73-UQ-oju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1175" y="-1320"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9nh-f8-gkE">
@@ -718,7 +742,7 @@
         <image name="album_icon" width="200" height="200"/>
         <image name="camera_icon" width="256" height="256"/>
         <image name="coffee_icon" width="256" height="256"/>
-        <image name="female" width="700" height="1136"/>
+        <image name="female" width="350" height="568"/>
         <image name="imageView:aH8-uL-zCI:image" width="300" height="300">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGVVZYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QEgcI
@@ -6828,7 +6852,7 @@ JAAFgyYABYMrAAWDMwAFlJ8ABZShAAWUpgAFlLQABZS4AAWUvwAFlMQABZTRAAWU1AAFlOEABZTmAAWU
 HQ
 </mutableData>
         </image>
-        <image name="male" width="682" height="1180"/>
+        <image name="male" width="341" height="590"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
